--- a/img/index.html
+++ b/img/index.html
@@ -11,7 +11,7 @@
 
     <header>
     <div class="logo">
-        <img src="tu_logo.png" alt="Logo">
+        <img src="Logo-Vane.png" alt="Logo">
       </div>
 
     <nav>
@@ -23,7 +23,7 @@
     </header>
     
         <section id="foto"> 
-            <img class="foto-vanessa" src="https://images.unsplash.com/photo-1479936343636-73cdc5aae0c3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="Foto de Vane" width="300"> 
+            <img src="Logo-Vane.png" alt="Logo-Vane" width="300"> 
         </section>  
 </head>
 
