--- a/img/index.html
+++ b/img/index.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles copy.css">
 
+<main>
     <header>
     <div class="logo">
         <img src="Logo-Vane.png" alt="Logo">
@@ -80,4 +81,5 @@
     <!-- En este archivo escriban su HTML -->
 
 </body>
+</main>
 </html>
